Opened 13 years ago
Closed 13 years ago
#3002 closed defect (fixed)
wmalossless: crash with forced codec
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | wmalossless crash SIGSEGV |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
http://samples.mplayerhq.hu/flac/24-bit_192kHz.flac
I wanted to check with random files if deadlock is really fixed and found this:
(gdb) r -acodec wmalossless -i 24-bit_192kHz.flac -vn -f null - -loglevel 0
Starting program: D:\MinGW\msys\1.0\ffmpeg-HEAD-a67dcd7\ffmpeg_g.exe -acodec wma
lossless -i 24-bit_192kHz.flac -vn -f null - -loglevel 0
[New Thread 2652.0x4d8]
[New Thread 2652.0xf64]
[New Thread 2652.0xfd4]
[New Thread 2652.0xfb8]
[New Thread 2652.0x6b4]
[New Thread 2652.0x294]
[New Thread 2652.0x7b4]
[New Thread 2652.0x5d4]
[New Thread 2652.0xa80]
[New Thread 2652.0xa6c]
Program received signal SIGSEGV, Segmentation fault.
0x008369c4 in init_get_bits (bit_size=0, buffer=0x0, s=0x4ee808c)
at libavcodec/get_bits.h:424
424 s->index = 0;
(gdb) bt
#0 0x008369c4 in init_get_bits (bit_size=0, buffer=0x0, s=0x4ee808c)
at libavcodec/get_bits.h:424
#1 decode_packet (avctx=0x4df6e60, data=0x4df7ec0, got_frame_ptr=0x22fa9c,
avpkt=0x22f768) at libavcodec/wmalosslessdec.c:1189
#2 0x0059ffdd in avcodec_decode_audio4 (avctx=0x4df6e60, frame=0x4df7ec0,
got_frame_ptr=0x22fa9c, avpkt=0x22f898) at libavcodec/utils.c:2124
#3 0x004141ea in decode_audio (got_output=<optimized out>,
pkt=<optimized out>, ist=<optimized out>) at ffmpeg.c:1526
#4 output_packet (ist=0x55e3c60, pkt=0x0) at ffmpeg.c:1863
#5 0x004164bf in process_input (file_index=0) at ffmpeg.c:2928
#6 0x00b0b3f8 in transcode_step () at ffmpeg.c:3181
#7 transcode () at ffmpeg.c:3233
#8 main (argc=11, argv=<optimized out>) at ffmpeg.c:3411
(gdb)
also crashes with (autobuild)
ffmpeg version N-56663-g851a6e2 Copyright (c) 2000-2013 the FFmpeg developers built on Sep 26 2013 02:40:41 with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5. 0-1.fc14) configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch= x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min gw32-gcc' --enable-pthreads --enable-memalign-hack --enable-runtime-cpudetect -- enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -lw inmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapsh ots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/sna pshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 -- enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-li bvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-li bopencore-amrwb --enable-libmp3lame --enable-libfreetype --enable-libvpx --disab le-decoder=libvpx libavutil 52. 46.100 / 52. 46.100 libavcodec 55. 33.100 / 55. 33.100 libavformat 55. 18.102 / 55. 18.102 libavdevice 55. 3.100 / 55. 3.100 libavfilter 3. 87.100 / 3. 87.100 libswscale 2. 5.100 / 2. 5.100 libswresample 0. 17.103 / 0. 17.103 libpostproc 52. 3.100 / 52. 3.100
Change History (2)
comment:1 by , 13 years ago
| Component: | undetermined → avcodec |
|---|---|
| Keywords: | wmalossless crash SIGSEGV added |
| Priority: | normal → important |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:2 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in 286beebdc34d11a301dfa5189e84f1c399d56133